--- a/.github/workflows/auto_deploy.yml
+++ b/.github/workflows/auto_deploy.yml
@@ -15,6 +15,6 @@ jobs:
 
             - run: npm install -g surge
             - run: echo "Deploying website"
-            - run: surge ./ ${{ secrets.SURGE_DOMAIN}} --token ${{ secrets.SURGE_TOKEN }} 
+            - run: surge ./ well-made-fireman.surge.sh --token ${{ secrets.SURGE_TOKEN }} 
           
            
